--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -199,23 +199,21 @@ we explain how to provide the validation of any \emph{specific constraint} immed
 
 \section{Introduction}
 
-The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
-OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
-Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
-On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true).
-This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation.  
-For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
+%The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
+%OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
+%Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
+%On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true).
+%This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation.  
+%For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
 In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
-In 2014, two working groups on RDF validation have been established to develop a language to express RDF constraints on RDF data: 
+In 2014, two working groups on RDF validation have been established to develop a language to express constraints on RDF data: 
 the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
 Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints
 which is available for contribution at \url{http://purl.org/net/rdf-validation}.
 The intention associated with this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
-The requirements are classified to better evaluate existing solutions and each requirement to formulate RDF constraints is directly mapped to an RDF constraint type.
-Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type. 
-They recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} in which they explain each requirement in detail and give examples for each (represented by different constraint languages) \cite{BoschNolleAcarEckert2015}.
+The requirements are classified to better evaluate existing solutions and each requirement is directly mapped to a constraint type.
 
 \tb{I copied this paragraph from the ESWC paper, we have to modify it}
 Recently, RDF validation as a research field gained speed due to common needs of data practitioners. A typical example is the library domain that co-developed and adopted Linked Data principles very early. For libraries, the common description of resources are key business and they have a long tradition in developing and using interoperable data formats. While they embrace the openness of Linked Data and the data modeling principles provided by RDF, the data is still mostly represented in XML and this is unlikely to change soon. 
@@ -225,11 +223,11 @@ A typical example is the definition of a library record describing a book. There
 There is no constraint language which can be seen as the standard.
 Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints (such as existential and universal quantification, cardinality restrictions, and exclusive or of properties).
 The five most promising ones on being the standard are
-Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
-Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
-Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
-the SPARQL Inferencing Notation (SPIN)\footnote{\url{http://spinrdf.org/}}, 
-and the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}.
+\emph{Description Set Profiles (DSP)}\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
+\emph{Resource Shapes (ReSh)}\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
+\emph{Shape Expressions (ShEx)}\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
+the \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org/}}, 
+and the \emph{Web Ontology Language (OWL 2)}\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}.
 %\section{Ideas}
 %constraint design patterns:
 % - ontology design pattern.org
@@ -238,83 +236,15 @@ and the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-sy
 % - constraint / constraint elements / constraint design patterns / constraint language
 %dependency between requirements / when this requirements is fulfilled then this is also fulfilled (e.g. min card and requ. car)
 %min car more powerful than req. propery
-The idea behind this paper is to express any constraint type (corresponding to a requirement to formulate RDF constraints) in a generic way using a lightweight vocabulary (consisting of only a few terms).
+The idea behind this paper is to express any constraint type (corresponding to a requirement to formulate RDF constraints) in a generic way using a lightweight vocabulary (consisting of only a few terms) (section \ref{sec:vocabulary}).
 
-Cardinality restrictions, e.g., can be expressed either generically (\emph{generic constraints}) by \emph{description logics (DL)} 
+\emph{Cardinality restrictions}, e.g., can be expressed either generically (\emph{generic constraints}) by \emph{description logics (DL)} 
 %and extensions  
 or specifically (\emph{specific constraints}) by domain-specific constraint languages such as OWL 2, DSP, ShEx, ReSh, and SPIN.
-The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints generically. 
+The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints in a generic way. 
 For that reason, we map constraint types to DL statements.
-With minimum qualified cardinality restrictions, researchers from the library domain can state
+With \emph{minimum qualified cardinality restrictions}, researchers (e.g. from the library domain) can state
 that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
-This constraint can be represented generically in DL as follows: \ms{Publication $\sqsubseteq$ $\geq$1 author.Person}.
-The same constraint may also be represented specifically by multiple constraint languages like OWL 2 and ShEx:
-
-\begin{ex}
-# OWL 2:
-Publication
-    a owl:Restriction ;
-    owl:minQualifiedCardinality 1 ;
-    owl:onProperty author ;
-    owl:onClass Person .
-		
-# ShEx:
-Publication { author @Person{1, } }
-\end{ex}
-
-As there is no standard way to formulate RDF constraints, 
-semantically equivalent cardinality restrictions may be represented by different constraint languages, which causes confusion and weakens the understanding how to ensure metadata quality between multiple parties. 
-Therefore, when choosing constraint language \ms{$\alpha$} to express a constraint of an arbitrary constraint type, it should be possible to transform this constraint into a constraint expressed by any other constraint language \ms{$\beta$}. 
-This is important in order to enhance the interoperability of constraint languages and to simplify the communication of RDF data producers and consumers, 
-as constraint transformations resolve the necessity to read, write, and understand all languages used to express RDF constraints.
-
-There are validation environments enabling to validate RDF constraints expressed by just a few constraint languages such as OWL 2\footnote{\url{purl.org/net/rdfval-demo}\label{footnote1}}, DSP\footref{footnote1}, and ShEx\footnote{\url{http://www.w3.org/2013/ShEx/FancyShExDemo}}.
-But, it should be possible to validate any RDF constraints expressed by any constraint language and 
-what is even more important to validate them in exactly the same manner without any differences. 
-If we implement the validation of a \emph{generic constraint} and if we transform a \emph{specific constraint} into a \emph{generic constraint}, we are able to validate the \emph{specific constraint} immediately. 
-As a consequence, we do not have to implement the validation for each \emph{specific constraint}, as we need to implement the validation only once for each \emph{generic constraint}. 
-
-%When domain experts use graphical user interfaces to define constraints in a user-friendly way (without the necessity to express constraints on their own), 
-%constraints can be mapped to either a specific or a generic constraint, as for both the validation is provided in the background.    
-%So, the user does not have to know how to express specific constraints using any constraint language.
-
-Existing constraint languages can be extended and new constraint languages can be developed, if existing constraint languages are not sufficient to represent needed constraint types.
-If (1) a new constraint type is expressed generically, (2) the \emph{generic constraint type} is mapped to \emph{specific constraint types} (expressed by constraint languages), and (3) the validation is implemented for this particular \emph{generic constraint type},
-the validation of \emph{specific constraint types} is provided out of the box.
-As a consequence, constraint language designers do not have to implement the validation of their constraint languages and each semantically equivalent \emph{specific constraint type} is validated the same way (i.e. leading to identical validation results).
-
-This paper aims to address two main \textbf{audiences}:
-(1) RDF data providers and consumers seeking how to ensure high quality (meta)data and thus for ways to enhance the interoperability and communication of RDF constraints expressed by multiple constraint languages and  
-(2) RDF practitioners thinking of how to implement the validation of existing an newly developed constraint languages.
-The \textbf{contributions} of this paper are:
-(1) We provide a basic terminology and classification system for RDF constraint types,
-(2) we developed a vocabulary describing any RDF constraint type generically (whether expressible in DL or not),
-(3) we show how to transform \emph{specific constraints} (expressed by any constraint language \ms{$\alpha$}) into \emph{generic constraints} and \emph{specific constraints} (expressed by any other constraint language \ms{$\beta$}), and
-(4) we explain how to provide the validation of any \emph{specific constraint} immediately. 
-%(if the validation is implemented once for the corresponding \emph{generic constraint type} to which the \emph{specific constraint type} is mapped)
-The remainder of the paper is as follows.
-
-%\begin{itemize}
-	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
-	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
-	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
-	%\item We define a basic terminology and classification system for RDF constraints
-	%\item We developed an ontology describing any RDF constraint generically (whether expressible in DL or not)%which can also be expressed by any constraint language
-	%\item We present that any RDF constraint can be described by the developed ontology - whether the constraint can be expressed in DL or not 
-	%\item We show how to transform specific constraints (expressed by any constraint language \ms{$\alpha$}) into generic constraints and into specific constraints (expressed by any other constraint language \ms{$\beta$})
-  %\item We explain that any specific constraint can be validated automatically (if the validation is implemented only once for the corresponding generic constraint)
-%\end{itemize}
-
-%The \textbf{benefits} of our framework are:
-%\begin{itemize}
-	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
-	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
-	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
-%\end{itemize}
-
-\section{Running Example}
-
-With \emph{minimum qualified cardinality restrictions}, \emph{publications} can be enforced to have at least one \emph{author} which must be a \emph{person}.
 This constraint can be represented generically (\emph{generic constraint}) using DL (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}), but also specifically (\emph{specific constraint}) by multiple constraint languages like OWL 2, ShEx, ReSh, or DSP:
 
 \begin{ex}
@@ -355,22 +285,75 @@ It also causes a constraint violation, if \emph{The-Lord-Of-The-Rings} has an \e
 The data is valid, however, if \emph{The-Lord-Of-The-Rings} is connected to a \emph{person} via the object property \emph{author}
 (\ms{author(The-Lord-Of-The-Rings, Tolkien)}, \ms{rdf:type(Tolkien, Person)}).
 
-Table \ref{tab:cardinality-restriction-mapped-to-vocabulary} shows the mapping between the \emph{cardinality restriction} represented in DL 
-and the \emph{cardinality restriction} expressed by our developed vocabulary to describe any RDF constraint generically (see section~\ref{sec:ontology}):
+As there is no standard way to formulate RDF constraints, 
+semantically equivalent \emph{cardinality restrictions} may be represented by different constraint languages, which causes confusion and weakens the understanding how to ensure metadata quality between multiple parties. 
+Therefore, when choosing constraint language \ms{$\alpha$} to express a constraint of an arbitrary constraint type, it should be possible to transform this constraint into a constraint expressed by any other constraint language \ms{$\beta$} (section \ref{sec:transformations}). 
+This is important in order to enhance the interoperability of constraint languages and to simplify the communication of RDF data producers and consumers, 
+as constraint transformations resolve the necessity to read, write, and understand all languages used to express RDF constraints.
 
-\begin{table}
-  \scriptsize
-  \sffamily
-  \vspace{0cm}
-	\centering
-		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
-      \hline
-      property & Publication & author & - & Person & $\geq$ & 1 \\
-		\end{tabular}
-	\caption{Cardinality Restriction Expressed Generically}
-	\label{tab:cardinality-restriction-mapped-to-vocabulary}
-\end{table}
+We provide a validation environment (available at \url{http://purl.org/net/rdfval-demo}) which enables to validate RDF data according to constraints expressed by multiple  constraint languages such as OWL 2, DSP, ReSh, and ShEx.
+The next step, however, is to validate any constraint type expressed by any constraint language and 
+what is even more important to validate them in exactly the same way, i.e. leading to identical validation results (section \ref{sec:validation}). 
+We are able to offer validation of any \emph{specific constraint} out-of-the-box, (1) if we implement the validation of the corresponding constraint type once and (2) if we transform semantically equivalent \emph{specific constraints} into the corresponding \emph{generic constraint}. 
+As a consequence, we do not have to implement the validation for each \emph{specific constraint}. 
+
+%When domain experts use graphical user interfaces to define constraints in a user-friendly way (without the necessity to express constraints on their own), 
+%constraints can be mapped to either a specific or a generic constraint, as for both the validation is provided in the background.    
+%So, the user does not have to know how to express specific constraints using any constraint language.
+
+%Existing constraint languages can be extended and new constraint languages can be developed, if existing constraint languages are not sufficient to represent needed constraint types.
+
+%If (1) a new constraint type is expressed generically, (2) the \emph{generic constraint type} is mapped to \emph{specific constraint types} (expressed by constraint languages), and (3) the validation is implemented for this particular \emph{generic constraint type},
+%the validation of \emph{specific constraint types} is provided out of the box.
+%As a consequence, constraint language designers do not have to implement the validation of their constraint languages and each semantically equivalent \emph{specific constraint type} is validated the same way (i.e. leading to identical validation results).
+
+This paper aims to address two main \textbf{audiences}:
+(1) RDF data providers and consumers seeking how to ensure high quality (meta)data and thus for ways to enhance the interoperability and communication of RDF constraints expressed by multiple constraint languages and  
+(2) RDF practitioners thinking of how to implement the validation of existing an newly developed constraint languages.
+The \textbf{contributions} of this paper are:
+(1) We provide a basic terminology and classification system for RDF constraint types,
+(2) we developed a vocabulary describing any RDF constraint type generically (whether expressible in DL or not),
+(3) we show how to transform \emph{specific constraints} (expressed by any constraint language \ms{$\alpha$}) into \emph{generic constraints} and \emph{specific constraints} (expressed by any other constraint language \ms{$\beta$}), and
+(4) we explain how to provide the validation of any \emph{specific constraint} immediately. 
+%(if the validation is implemented once for the corresponding \emph{generic constraint type} to which the \emph{specific constraint type} is mapped)
+The remainder of the paper is as follows.
+
+%\begin{itemize}
+	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
+	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
+	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
+	%\item We define a basic terminology and classification system for RDF constraints
+	%\item We developed an ontology describing any RDF constraint generically (whether expressible in DL or not)%which can also be expressed by any constraint language
+	%\item We present that any RDF constraint can be described by the developed ontology - whether the constraint can be expressed in DL or not 
+	%\item We show how to transform specific constraints (expressed by any constraint language \ms{$\alpha$}) into generic constraints and into specific constraints (expressed by any other constraint language \ms{$\beta$})
+  %\item We explain that any specific constraint can be validated automatically (if the validation is implemented only once for the corresponding generic constraint)
+%\end{itemize}
+
+%The \textbf{benefits} of our framework are:
+%\begin{itemize}
+	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
+	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
+	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
+%\end{itemize}
+
+%\section{Running Example}
+%
+%Table \ref{tab:cardinality-restriction-mapped-to-vocabulary} shows the mapping between the \emph{cardinality restriction} represented in DL 
+%and the \emph{cardinality restriction} expressed by our developed vocabulary to describe any RDF constraint generically (see section~\ref{sec:ontology}):
+%
+%\begin{table}
+  %\scriptsize
+  %\sffamily
+  %\vspace{0cm}
+	%\centering
+		%\begin{tabular}{l|l|l|l|l|l|l}
+      %\textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      %\hline
+      %property & Publication & author & - & Person & $\geq$ & 1 \\
+		%\end{tabular}
+	%\caption{Cardinality Restriction Expressed Generically}
+	%\label{tab:cardinality-restriction-mapped-to-vocabulary}
+%\end{table}
 
 %According to this vocabulary, each constraint is either a constraint on classes or a constraint on properties.
 %The generically expressed cardinality restriction is represented in RDF as follows:
@@ -384,10 +367,10 @@ and the \emph{cardinality restriction} expressed by our developed vocabulary to 
     %constrainingValue 1 ] .
 %\end{ex}
 
-Bosch and Eckert\cite{BoschEckert2014-2} use SPIN as basis to define a
-validation environment (available at \url{http://purl.org/net/rdfval-demo}) in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL. 
-The SPIN engine checks for each resource if it satisfies all constraints (associated with its assigned classes) and generates a result RDF graph containing information about all constraint violations.
-The generically expressed \emph{cardinality restriction} above is validated within the validation environment (see section \ref{sec:validation}) by means of a SPARQL CONSTRUCT query.
+%Bosch and Eckert\cite{BoschEckert2014-2} use SPIN as basis to define a
+%validation environment in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL. 
+%The SPIN engine checks for each resource if it satisfies all constraints (associated with its assigned classes) and generates a result RDF graph containing information about all constraint violations.
+%The generically expressed \emph{cardinality restriction} above is validated within the validation environment (see section \ref{sec:validation}) by means of a SPARQL CONSTRUCT query.
 
 %\begin{ex}
 %[   a PropertyConstraint ;
@@ -402,7 +385,7 @@ The generically expressed \emph{cardinality restriction} above is validated with
 %\end{ex}
 
 \section{A Vocabulary to Describe RDF Constraints Generically} 
-\label{sec:ontology}
+\label{sec:vocabulary}
 
 In order to develop a vocabulary to describe any RDF constraint generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
 A \textbf{\emph{constraint language}} is a language which is used to formulate constraints.
