--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -363,6 +363,28 @@ $\exists R. \top \sqsubseteq C$ is the object property restriction where $R$ is 
 	\item \textbf{{\em DISCO-C-PROPERTY-DOMAIN-01:}} 
 	{\em Property Domain} constraints are defined for each \emph{Disco} object and data property.
   Only {\em disco:Question}s, e.g., can have {\em disco:responseDomain} relationships (\ms{$\exists$ responseDomain.$\top$ $\sqsubseteq$ Question}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em DATA-CUBE-C-PROPERTY-DOMAIN-01:}} 
+	{\em Property Domain} constraints are defined for each \emph{Data Cube} object and data property.
+  Only {\em qb:Observation}s, e.g., can have {\em qb:dataSet} relationships (\ms{$\exists$ dataSet.$\top$ $\sqsubseteq$ Observation}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em DCAT-C-PROPERTY-DOMAIN-01:}} 
+	{\em Property Domain} constraints are defined for each \emph{DCAT} object and data property.
+  Only {\em dcat:Catalog}s, e.g., can have {\em dcat:dataset} relationships (\ms{$\exists$ dataset.$\top$ $\sqsubseteq$ Catalog}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em PHDD-C-PROPERTY-DOMAIN-01:}} 
+	{\em Property Domain} constraints are defined for each \emph{PHDD} object and data property.
+  Only {\em phdd:Table}s, e.g., can have {\em phdd:isStructuredBy} relationships (\ms{$\exists$ isStructuredBy.$\top$ $\sqsubseteq$ Table}).
+	Severity level: ERROR
 \end{itemize}
 
 \subsection{Property Ranges*}
@@ -374,6 +396,28 @@ $\top \sqsubseteq \forall R . C$ is the range restriction to the object property
 	\item \textbf{{\em DISCO-C-PROPERTY-RANGES-01:}} 
 	{\em Property Range} constraints are defined for each \emph{Disco} object and data property.
   {\em disco:caseQuantity} relationships, e.g., can only point to literals of the datatype {\em xsd:nonNegativeInteger} (\ms{$\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em DATA-CUBE-C-PROPERTY-RANGES-01:}} 
+	{\em Property Range} constraints are defined for each \emph{Data Cube} object and data property.
+  {\em qb:order} relationships, e.g., can only point to literals of the datatype {\em xsd:string} (\ms{$\top$ $\sqsubseteq$ $\forall$ order.string}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em DCAT-C-PROPERTY-RANGES-01:}} 
+	{\em Property Range} constraints are defined for each \emph{DCAT} object and data property.
+  {\em dcat:bytes} relationships, e.g., can only point to literals of the datatype {\em xsd:integer} (\ms{$\top$ $\sqsubseteq$ $\forall$ bytes.integer}).
+	Severity level: ERROR
+\end{itemize}
+
+\begin{itemize}
+	\item \textbf{{\em PHDD-C-PROPERTY-RANGES-01:}} 
+	{\em Property Range} constraints are defined for each \emph{PHDD} object and data property.
+  {\em phdd:caseQuantity} relationships, e.g., can only point to literals of the datatype {\em xsd:nonNegativeInteger} (\ms{$\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger}).
+	Severity level: ERROR
 \end{itemize}
 
 \subsection{Inverse Object Properties*}
@@ -968,6 +1012,19 @@ There must be at least one English {\em disco:questionText} for each {\em disco:
 There should be at most one English literal value for variable names ({\em skos:notation}, domain: {\em disco:Variable}).
 \end{itemize}
 
+\begin{itemize}
+	\item \textbf{{\em SKOS-C-LANGUAGE-TAG-CARDINALITY-01\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Omitted or Invalid Language Tags}:}}
+Some controlled vocabularies contain literals in natural language, but without information what language has actually been used. Language tags might also not conform to language standards, such as RFC 3066. 
+Iteration over all triples in the vocabulary that have a predicate which is a (subclass of) \emph{rdfs:label} or \emph{skos:note}. 
+Severity level: INFO
+  \item \textbf{{\em SKOS-C-LANGUAGE-TAG-CARDINALITY-02\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Incomplete Language Coverage}:}}
+	Some concepts in a thesaurus are labeled in only one language, some in multiple languages. It may be desirable to have each concept labeled in each of the languages that also are used on the other concepts. This is not always possible, but incompleteness of language coverage for some concepts can indicate shortcomings of the vocabulary. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-LANGUAGE-TAG-CARDINALITY-03\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - No Common Language}:}}
+	Checks if all concepts have at least one common language, i.e. they have assigned at least one literal in the same language. 
+	Severity level: INFO
+\end{itemize}
+
 \subsection{Whitespace Handling}
 
 Avoid whitespaces in literals neither leading nor trailing white spaces\footnote{\emph{R-50-WHITESPACE-HANDLING-OF-RDF-LITERALS}}.
@@ -1063,23 +1120,95 @@ Some constraints require aggregating multiple values, especially via \emph{COUNT
   \item \textbf{{\em DISCO-C-AGGREGATION-07}}: the absolute frequency of all valid codes of a given variable must be equal to a given value.
 \end{itemize} 
 
-\subsection{\underline{Hierarchies}}
+\subsection{\underline{Structure}}
+
+SKOS is based on RDF, which is a graph-based data model. Therefore we can concentrate on the vocabulary's graph-based structure for assessing the quality of SKOS vocabularies and apply graph- and network-analysis techniques. 
 
 \begin{itemize}
-	\item \textbf{{\em DISCO-C-HIERARCHIES-01}}: there must be exactly one root in the hierarchy of DDI concepts. 
+	\item \textbf{{\em DISCO-C-STRUCTURE-01}}: there must be exactly one root in the hierarchy of DDI concepts. 
 \end{itemize} 
 
 \begin{itemize}
-	\item \textbf{{\em DATA-CUBE-C-HIERARCHIES-01:}}
+	\item \textbf{{\em DATA-CUBE-C-STRUCTURE-01:}}
 	Codes from hierarchy (\emph{IC-20} \cite{CyganiakReynolds2014}) -  
 	If a dimension property has a \emph{qb:HierarchicalCodeList} with a non-blank \emph{qb:parentChildProperty} then the value of that dimension property on every \emph{qb:Observation} must be reachable from a root of the hierarchy using zero or more hops along the \emph{qb:parentChildProperty} links. 
-	\item \textbf{{\em DATA-CUBE-C-HIERARCHIES-02:}}
+	\item \textbf{{\em DATA-CUBE-C-STRUCTURE-02:}}
 	Codes from hierarchy (inverse) (\emph{IC-21} \cite{CyganiakReynolds2014}) -  
 	If a dimension property has a \emph{qb:HierarchicalCodeList} with an inverse \emph{qb:parentChildProperty} then the value of that dimension property on every \emph{qb:Observation} must be reachable from a root of the hierarchy using zero or more hops along the inverse \emph{qb:parentChildProperty} links. 
 \end{itemize}
 
-\section{SKOS-Related RDF Validation Requirements / Constraint Types}
-\tb{from other paper of Antoine}
+\begin{itemize}
+	\item \textbf{{\em SKOS-C-STRUCTURE-01\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Orphan Concepts}:}}
+	Orphan Concepts:
+  An orphan concept is a concept without any associative or hierarchical relations. It might have attached literals like e.g., labels, but is not connected to any other resource, lacking valuable context information. A controlled vocabulary that contains many orphan concepts is less usable for search and retrieval use cases, because, e.g., no hierarchical query expansion can be performed on search terms to find documents with more general content. 
+	Iteration over all concepts in the vocabulary and returning that don't have associated resources using (subproperties of) \emph{skos:semanticRelation}. 
+  Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-02\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Disconnected Concept Clusters}:}}
+	Disconnected Concept Clusters:
+	Checking the connectivity of the graph, it is possible to identify all weakly connected components. These datasets form "islands" in the vocabulary and might be caused by incomplete data acquisition, "forgotten" test data, outdated terms and the like. 
+	Implementation: Creation of an undirected graph that includes all non-orphan concepts as nodes and all semantic relations as edges. Tarjan's algorithm then finds and returns all weakly connected components.
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-03\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Cyclic Hierarchical Relations}:}}
+	Cyclic Hierarchical Relations: 
+	Although perfectly consistent with the SKOS data model, cyclic relations may reveal a logical problem in the thesaurus. Consider the following example: "decision" $\rightarrow$ "problem resolution" $\rightarrow$ "problem" ($\rightarrow$ "decision": here the cycle is closed). The concepts are connected using \emph{skos:broader} relationships (indicated with "$\rightarrow$"). Due to the fact that a thesaurus is in many cases a product of consensus between the contributors (or just the decision of one dedicated thesaurus manager), it will be almost impossible to automatically resolve the cycle (i.e. deleting an edge). 
+	Implementation: Construction of a graph having all concepts as nodes and the set of edges being \emph{skos:broader} relations. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-04\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Valueless Associative Relations}:}}
+	Valueless Associative Relations:
+	Two concepts are sibling, but also connected by an associative relation. In that context, the associative relation is not necessary. See ISO\_DIS\_25964-1, 11.3.2.2 
+	Implementation:
+	Identification of all pairs of concepts that have the same broader or narrower concepts, i.e. they are "sibling terms". All siblings that are related by a \emph{skos:related} property are returned. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-05\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Solely Transitively Related Concepts}:}}
+	Solely Transitively Related Concepts:
+	\emph{skos:broaderTransitive} and \emph{skos:narrowerTransitive} are, according to the SKOS reference document, "not used to make assertions", so they should not be the only relations hierarchically relating two concepts. 
+	Implementation: Identification of all concept pairs that are related by \emph{skos:broaderTransitive} or \emph{skos:narrowerTransitive} properties but not by their \emph{skos:broader} and \emph{skos:narrower} subproperties. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-06\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Unidirectionally Related Concepts}:}}
+	Unidirectionally Related Concepts:
+	Reciprocal relations (e.g., \emph{broader/narrower, related, hasTopConcept/topConceptOf}) should be included in the controlled vocabularies to achieve better search results using SPARQL in systems without reasoner support. 
+	Implementation:
+	This issue is checked without inference of \emph{owl:inverseOf} properties. We iterate over all triples and check for each property if an inverse property is defined in the SKOS ontology and if the respective statement using this property is included in the vocabulary. If not, the resources associated with this property are returned. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-07\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Omitted Top Concepts}:}}
+	Omitted Top Concepts:
+	A vocabulary should provide "entry points" to the data to provide “efficient access” (SKOS primer) and guidance for human users. 
+	Implementation:
+	For every ConceptScheme in the controlled vocabulary, a SPARQL query is issued finding resources that are associated with this ConceptScheme by one of the properties \emph{skos:hasTopConcept} or \emph{skos:topConceptOf}. Top concepts are also concepts having no broader concept. 
+	Severity level: SHOULD
+\end{itemize}
+
+\subsection{\underline{Labeling and Documentation}}
+
+\begin{itemize}
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-01\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Undocumented Concepts}:}}
+	Undocumented Concepts:
+  The SKOS standard defines a number of properties useful for documenting the meaning of the concepts in a thesaurus also in a human-readable form. Intense use of these properties leads to a well-documented thesaurus which should also improve its quality.  
+	Iteration over all concepts in the vocabulary and find those not using one of \emph{skos:note}, \emph{skos:changeNote}, \emph{skos:definition}, \emph{skos:editorialNote}, \emph{skos:example}, \emph{skos:historyNote}, or \emph{skos:scopeNote}.
+  Severity level: INFO
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-02\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Overlapping Labels}:}}
+	Overlapping Labels:
+	This is a generalization of a recommendation in the SKOS primer, that “no two concepts have the same preferred lexical label in a given language when they belong to the same concept scheme”. This could indicate missing disambiguation information and thus lead to problems in autocompletion application. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-03\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Missing Labels}:}}
+	Missing Labels:
+	To make the vocabulary more convenient for humans to use, instances of SKOS classes (Concept, ConceptScheme, Collection) should be labeled using e.g., \emph{skos:prefLabel}, \emph{altLabel}, \emph{rdfs:label}, \emph{dc:title}. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-04\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Unprintable Characters in Labels}:}}
+	Unprintable Characters in Labels:
+	\emph{pref/alt/hiddenlabels} contain characters that are not alphanumeric characters or blanks.
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-05\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Empty Labels}:}}
+	Empty Labels:
+	Labels also need to contain textual information to be useful, thus we find all SKOS labels with length 0 (after removing whitespaces). 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-LABELING-AND-DOCUMENTATION-06\footnote{Corresponds to qSKOS Quality Issues - Labeling and Documentation Issues - Ambiguous Notation References}:}}
+	Ambiguous Notation References:
+	Concepts within the same concept scheme should not have identlical \emph{skos:notation} literals. 
+	Severity level: INFO
+\end{itemize}
+
+\section{SKOS-Related Constraint Types}
 
 \section{Validation in Combination with other Vocabularies}
 
