--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -1176,6 +1176,20 @@ SKOS is based on RDF, which is a graph-based data model. Therefore we can concen
 	Implementation:
 	For every ConceptScheme in the controlled vocabulary, a SPARQL query is issued finding resources that are associated with this ConceptScheme by one of the properties \emph{skos:hasTopConcept} or \emph{skos:topConceptOf}. Top concepts are also concepts having no broader concept. 
 	Severity level: SHOULD
+	\item \textbf{{\em SKOS-C-STRUCTURE-08\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Top Concepts Having Broader Concepts}:}}
+	Top Concepts Having Broader Concepts:
+	Concepts "internal to the tree" should not be indicated as top concepts.
+	Implementation:
+	A SPARQL query finds all top concepts (being defined by one of the properties \emph{skos:hasTopConcept} or \emph{skos:topConceptOf}) having associated a broader concept. 
+	Severity level: ERROR
+	\item \textbf{{\em SKOS-C-STRUCTURE-09\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Hierarchical Redundancy}:}}
+	Hierarchical Redundancy:
+	As stated in the SKOS reference document, \emph{skos:broader} and \emph{skos:narrower} are not transitive properties. However, they are subproperties of \emph{skos:broaderTransitive} and \emph{skos:narrowerTransitive} which enables inference of a "transitive closure". This, in fact, leaves it up to the user to interpret wheter a vocabulary's hierarchical structure is seen as transitive or not. In the former case, this check can be useful. It finds pairs of concepts (A,B) that are directly hierarchically related but there also exits an hierarchical path through a concept C that connects A and B. 
+	Severity level: INFO
+	\item \textbf{{\em SKOS-C-STRUCTURE-10\footnote{Corresponds to qSKOS Quality Issues - Structural Issues - Reflexive Relations}:}}
+	Reflexive Relations:
+	Concepts related to themselves. 
+	Severity level: INFO
 \end{itemize}
 
 \subsection{\underline{Labeling and Documentation}}
