RDF Validation of Metadata and Data

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -298,6 +298,17 @@
   Timestamp                = {2014.11.07}
 }
 
+@Article{BoschZapilkoWackerowEckert2015,
+  Title                    = {RDF Constraint Types to Validate Metadata on Highly-Complex Person-Level and Aggregated Data},
+  Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
+  Year                     = {2015},
+
+  Eprintclass              = {cs.LO},
+  Eprinttype               = {arxiv},
+  Owner                    = {Thomas Bosch},
+  Timestamp                = {2015.02.20}
+}
+
 @Article{BoschZapilkoWackerowGregory2013,
   Title                    = {Towards the Discovery of Person-Level Data - Reuse of Vocabularies and Related Use Cases},
   Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Gregory, Arofan},
